<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="128dp">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/history_card_item"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/cardview_elevation"
        app:cardElevation="4dp"
        card_view:cardCornerRadius="@dimen/cardview_elevation"
        card_view:contentPaddingBottom="@dimen/cardview_elevation"
        card_view:contentPaddingLeft="@dimen/cardview_elevation"
        card_view:contentPaddingRight="@dimen/cardview_elevation"
        card_view:contentPaddingTop="@dimen/cardview_elevation">

        <TextView
            android:id="@+id/base_history_item_currency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="112dp"
            android:layout_marginTop="24dp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/base_history_item_currency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="192dp"
            android:layout_marginTop="24dp"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/target_history_item_currency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="192dp"
            android:layout_marginTop="48dp"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="61dp" />

        <TextView
            android:id="@+id/history_item_target_currency_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="146dp"
            android:layout_marginTop="72dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="88dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/target_currency_price"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="88dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/base_currency"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/history_time_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/some_time"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/target_history_item_currency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="112dp"
            android:layout_marginTop="48dp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="61dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/target_currency"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="61dp" />
    </android.support.v7.widget.CardView>
</RelativeLayout>